@@ -58,6 +58,17 @@ specifier|public
 class|class
 name|JSONTestUtil
 block|{
+comment|/**    * Default delta used in numeric equality comparisons for floats and doubles.    */
+DECL|field|DEFAULT_DELTA
+specifier|public
+specifier|final
+specifier|static
+name|double
+name|DEFAULT_DELTA
+init|=
+literal|1e-5
+decl_stmt|;
+comment|/**     * comparison using default delta    * @see #DEFAULT_DELTA    * @see #match(String,String,double)    */
 DECL|method|match
 specifier|public
 specifier|static
@@ -69,6 +80,100 @@ name|input
 parameter_list|,
 name|String
 name|pathAndExpected
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+return|return
+name|match
+argument_list|(
+name|input
+argument_list|,
+name|pathAndExpected
+argument_list|,
+name|DEFAULT_DELTA
+argument_list|)
+return|;
+block|}
+comment|/**     * comparison using default delta    * @see #DEFAULT_DELTA    * @see #match(String,String,String,double)    */
+DECL|method|match
+specifier|public
+specifier|static
+name|String
+name|match
+parameter_list|(
+name|String
+name|path
+parameter_list|,
+name|String
+name|input
+parameter_list|,
+name|String
+name|expected
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+return|return
+name|match
+argument_list|(
+name|path
+argument_list|,
+name|input
+argument_list|,
+name|expected
+argument_list|,
+name|DEFAULT_DELTA
+argument_list|)
+return|;
+block|}
+comment|/**    * comparison using default delta    * @see #DEFAULT_DELTA    * @see #matchObj(String,Object,Object,double)    */
+DECL|method|matchObj
+specifier|public
+specifier|static
+name|String
+name|matchObj
+parameter_list|(
+name|String
+name|path
+parameter_list|,
+name|Object
+name|input
+parameter_list|,
+name|Object
+name|expected
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+return|return
+name|matchObj
+argument_list|(
+name|path
+argument_list|,
+name|input
+argument_list|,
+name|expected
+argument_list|,
+name|DEFAULT_DELTA
+argument_list|)
+return|;
+block|}
+comment|/**    * @param input JSON Structure to parse and test against    * @param pathAndExpected JSON path expression + '==' + expected value    * @param delta tollerance allowed in comparing float/double values    */
+DECL|method|match
+specifier|public
+specifier|static
+name|String
+name|match
+parameter_list|(
+name|String
+name|input
+parameter_list|,
+name|String
+name|pathAndExpected
+parameter_list|,
+name|double
+name|delta
 parameter_list|)
 throws|throws
 name|Exception
@@ -127,9 +232,12 @@ argument_list|,
 name|input
 argument_list|,
 name|expected
+argument_list|,
+name|delta
 argument_list|)
 return|;
 block|}
+comment|/**    * @param path JSON path expression    * @param input JSON Structure to parse and test against    * @param expected expected value of path    * @param delta tollerance allowed in comparing float/double values    */
 DECL|method|match
 specifier|public
 specifier|static
@@ -144,6 +252,9 @@ name|input
 parameter_list|,
 name|String
 name|expected
+parameter_list|,
+name|double
+name|delta
 parameter_list|)
 throws|throws
 name|Exception
@@ -179,7 +290,7 @@ name|expectObj
 argument_list|)
 return|;
 block|}
-comment|/**   public static Object fromJSON(String json) {     try {       Object out = ObjectBuilder.fromJSON(json);     } finally {    }   **/
+comment|/**    * @param path JSON path expression    * @param input JSON Structure    * @param expected expected JSON Object    * @param delta tollerance allowed in comparing float/double values    */
 DECL|method|matchObj
 specifier|public
 specifier|static
@@ -194,6 +305,9 @@ name|input
 parameter_list|,
 name|Object
 name|expected
+parameter_list|,
+name|double
+name|delta
 parameter_list|)
 throws|throws
 name|Exception
@@ -318,6 +432,11 @@ specifier|public
 name|Object
 name|expected
 decl_stmt|;
+DECL|field|delta
+specifier|public
+name|double
+name|delta
+decl_stmt|;
 DECL|field|path
 specifier|public
 name|List
@@ -337,6 +456,9 @@ name|CollectionTester
 parameter_list|(
 name|Object
 name|val
+parameter_list|,
+name|double
+name|delta
 parameter_list|)
 block|{
 name|this
@@ -351,6 +473,12 @@ name|valRoot
 operator|=
 name|val
 expr_stmt|;
+name|this
+operator|.
+name|delta
+operator|=
+name|delta
+expr_stmt|;
 name|path
 operator|=
 operator|new
@@ -359,6 +487,24 @@ argument_list|<
 name|Object
 argument_list|>
 argument_list|()
+expr_stmt|;
+block|}
+DECL|method|CollectionTester
+specifier|public
+name|CollectionTester
+parameter_list|(
+name|Object
+name|val
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|val
+argument_list|,
+name|JSONTestUtil
+operator|.
+name|DEFAULT_DELTA
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|getPath
@@ -759,7 +905,7 @@ operator|-
 name|b
 argument_list|)
 operator|<
-literal|1e-5
+name|delta
 condition|)
 return|return
 literal|true
