@@ -262,6 +262,34 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|response
+operator|.
+name|ResultContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|response
+operator|.
+name|SolrQueryResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|schema
 operator|.
 name|IndexSchema
@@ -279,6 +307,34 @@ operator|.
 name|schema
 operator|.
 name|SchemaField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|DocIterator
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|DocList
 import|;
 end_import
 
@@ -1782,7 +1838,7 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/** Validates a query matches some JSON test expressions and closes the query.    * The text expression is of the form path:JSON.  To facilitate easy embedding    * in Java strings, the JSON can have double quotes replaced with single quotes.    *    * Please use this with care: this makes it easy to match complete structures, but doing so    * can result in fragile tests if you are matching more than what you want to test.    *    **/
+comment|/**     * Validates a query matches some JSON test expressions using the default double delta tollerance.    * @see JSONTestUtil#DEFAULT_DELTA    * @see #assertJQ(SolrQueryRequest,double,String...)    */
 DECL|method|assertJQ
 specifier|public
 specifier|static
@@ -1791,6 +1847,38 @@ name|assertJQ
 parameter_list|(
 name|SolrQueryRequest
 name|req
+parameter_list|,
+name|String
+modifier|...
+name|tests
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|assertJQ
+argument_list|(
+name|req
+argument_list|,
+name|JSONTestUtil
+operator|.
+name|DEFAULT_DELTA
+argument_list|,
+name|tests
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**     * Validates a query matches some JSON test expressions and closes the     * query. The text expression is of the form path:JSON.  To facilitate     * easy embedding in Java strings, the JSON can have double quotes     * replaced with single quotes.    *<p>    * Please use this with care: this makes it easy to match complete     * structures, but doing so can result in fragile tests if you are     * matching more than what you want to test.    *</p>    * @param req Solr request to execute    * @param delta tollerance allowed in comparing float/double values    * @param tests JSON path expression + '==' + expected value    */
+DECL|method|assertJQ
+specifier|public
+specifier|static
+name|void
+name|assertJQ
+parameter_list|(
+name|SolrQueryRequest
+name|req
+parameter_list|,
+name|double
+name|delta
 parameter_list|,
 name|String
 modifier|...
@@ -1967,6 +2055,8 @@ argument_list|(
 name|response
 argument_list|,
 name|testJSON
+argument_list|,
+name|delta
 argument_list|)
 decl_stmt|;
 name|failed
